# Tech-Challenge-Datathon

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml  drift-check.yml  retrain.yml
configs/: model_config.yaml
configs/grafana/: Dockerfile
configs/grafana/dashboards/: lstm-overview.json
configs/grafana/provisioning/dashboards/: dashboard.yml
configs/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  GAPS_MAPPING.md  MODEL_CARD.md  RUNBOOK.md
src/features/: feature_engineering.py  ingestion.py
src/models/: train.py
src/monitoring/: drift.py
src/serving/: Dockerfile  app.py
tests/: conftest.py  test_api.py  test_drift.py  test_features.py  test_ingestion.py  test_train.py
